sticky fix when navbar too long

--- a/assets/css/skin.css
+++ b/assets/css/skin.css
@@ -25,6 +25,7 @@ nav {
   position: -webkit-sticky;
   position: sticky;
   top: 0;
+  overflow-y: scroll;
 }
 
 footer {
