--- a/assets/css/text-highlighting.css
+++ b/assets/css/text-highlighting.css
@@ -57,6 +57,7 @@ ul.text-highlighted-info {
     font-size: 90%;
     padding-right: 5px;
 	display: none;
+	margin-bottom: 45px;
 }
 
 ul.text-highlighted-info li::before {
